@@ -52,7 +52,7 @@ public class AlternatingAgent extends MicroAgent
 
 		try
 		{
-			eis.associateEntity(getAgentIdentifier().getName(), (String)eis.getFreeEntities().getFirst());
+			eis.associateEntity(getAgentIdentifier().getName(), (String)eis.getFreeEntities().get(0));
 		}
 		catch(RelationException e)
 		{
